style.css
/* ... */
@media only screen and (max-width: 1000px){
    .main img {
        width: 0px;
        height: 0px;
        opacity: 0;
    }
    .show1 {
        width: 200px;
        height: 400px;
    }
    .menubutton {
        opacity: 1;
        display: flex;
        align-items: center;
        justify-content: center;
        width: 60px;
        height: 60px;
        background: none;
        border: 0px solid black;
        position: relative;
        left: 100px;
    }
    .menubutton:hover {
        cursor: pointer;
    }
    .navlinks {
        width: 0%;
    }
    .showmenu {
        opacity: 1;
        width: 150px;    
        height: 400px;
        position: absolute;
        margin-right: 40px;
        background-color: rgb(130, 130, 130);
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        border-radius: 25px;
        z-index: 99;
    }
    .showmenu p {
        font-size: 25px;
        margin: 20px;
    }
    .showmenu a {
        color: white;
        text-decoration: none;
    }

    .showmenu a:hover {
        .navlinks a:hover {
            text-decoration: underline;
            text-decoration-color: var(--imagebgcollor);
            text-decoration-thickness: 3px;
            text-underline-offset: 4px;
        }
        
    }
    .showmenu {
        opacity: 1;
    }
    .hidden2 {
        opacity: 0;
    }
    .show1 {
        opacity: 1;
    }

    .show1 img {    
        width: 60px;
        height: 60px;
        margin-right: 20px;
    }
    .main {
        align-items: center;
        justify-content: center;
    }
    
    /* Size and flex of main box/sircle*/
    
    .mainbox {
        width:  0px;
        height: 0px;
        opacity: 0;
    }
    .maintext h1 {
        font-size: 30px;
    }

    .maintext a {
        font-size: 20px;
    }
    .maintext {
        width: 100%;
        display: flex;
        justify-content: center;
        align-items: center;
        flex-direction: column;
    }
    .maintext button img {
        width: 50px;
        height: 50px;
        opacity: 1;
    }
    
    .maintext button {
        width: 250px;
        height: 75px;
    }
    .amtext {
        width: 40%;
        display: flex;
        justify-content: center;
        align-items: center;
        flex-direction: column;
    }
    .aboutme {
        width: 100%;
        display: flex;
        align-items: center;
        justify-content: center;
        width: 100%;
    }
    .aboutme p {
        font-size: 20px;
    }
    .aboutme h1 {
        font-size: 30px;
    }
    .amimg img {
        width: 0px;
        height: 0px;
        opacity: 0;
    }

    .projects p {
        font-size: 25px;
    }
    .ptxt {
        display: flex;
        align-items: center;
        justify-content: center;
        flex-direction: column;
    }
    .projects {
        width: 100%;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }
    .projects h1 {
        font-size: 35px;
    }
    .projectsbtns {
        display: grid;
        align-items: center;
        justify-content: center;
        grid-template-columns: 225px 225px;
    }
    .projectsbtns button {
        width: 175px;
        height: 80px;
        margin: 10px;
    }
    .projectsbtns p {
        font-size: 20px;
    }
    .pimg img {
        width: 0px;
        height: 0px;
        opacity: 0;
    }
    .stext h1 {
        font-size: 40px;
    }
    .stext p {
        font-size: 30px;
    }
    .sbuttons button {
        width: 225px;
        height: 70px;
        border-radius: 50px;
    }
    .sbuttons p {
        font-size: 35px;
    }
    .contact h1 {
        font-size: 35px;
    }
    .contact p {
        font-size: 20px;
    }   
}
/* ... */

